force-app/main/default/objects/AM_Student_Interaction__c/fields/AM_CommunicationMethod__c.field-meta.xml
<CustomField>
    <fullName>AM_CommunicationMethod__c</fullName>
    <label>Communication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>