force-app/main/default/objects/AM_Student_Interaction__c/fields/AM_InteractionDate__c.field-meta.xml
<CustomField>
    <fullName>AM_InteractionDate__c</fullName>
    <label>Interaction Date</label>
    <type>Date</type>
</CustomField>