force-app/main/default/objects/AM_Student_Interaction__c/fields/AM_MinutesOfMeeting__c.field-meta.xml
<CustomField>
    <fullName>AM_MinutesOfMeeting__c</fullName>
    <label>Minutes of Meeting</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>