force-app/main/default/objects/AM_Student_Interaction__c/fields/AM_Student__c.field-meta.xml
<CustomField>
    <fullName>AM_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>AM_Student__c</referenceTo>
    <relationshipLabel>Student Interactions</relationshipLabel>
    <relationshipName>Student_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>