force-app/main/default/objects/AM_Student_Interaction__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Student Interactions</relationshipLabel>
    <relationshipName>Student_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>